Bug 448868 - "sq m" not accepted for square meter conversion
Summary: "sq m" not accepted for square meter conversion
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kunitconversion
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 5.90.0
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: John Layt
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-01-21 05:35 UTC by saxn
Modified: 2022-05-26 16:19 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.95
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description saxn 2022-01-21 05:35:28 UTC
Cannot convert sq m to sq ft.
But we can convert sq ft to sq m

if 1 sq ft is typed in krunner it shows converter.
If 1 sq m is typed krunner shows nothing.
Comment 1 Nate Graham 2022-01-23 05:43:26 UTC
It works when I type "1 square meter", so I suspect the issue is that "sq m" is not accepted when it should be.

Would you like to submit a merge request to fix this? It's quite simple: you just need to add "sq m" (and maybe also "square m" to https://invent.kde.org/frameworks/kunitconversion/-/blob/master/src/area.cpp#L144

I can help, if this is the first time you've ever done such a thing. You can find some instructions at https://community.kde.org/Infrastructure/GitLab
Comment 2 Bug Janitor Service 2022-05-24 18:50:40 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kunitconversion/-/merge_requests/25
Comment 3 Nate Graham 2022-05-26 16:19:24 UTC
Git commit e792664ecac4b7bd1edc8f809d7d0bca20da4f35 by Nate Graham.
Committed on 26/05/2022 at 16:01.
Pushed by ngraham into branch 'master'.

Add "sq [thing]" as activation trigger for various common area measurements
FIXED-IN: 5.95

M  +4    -4    src/area.cpp

https://invent.kde.org/frameworks/kunitconversion/commit/e792664ecac4b7bd1edc8f809d7d0bca20da4f35