Add "sq [thing]" as activation trigger for various common area measurements

BUG: 448868
FIXED-IN: 5.95